removed bootstrap cdn

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@
  }
 
  .navbar-default {
- 	background-color: #333333;
+ 	background-color: #707070;
  	border-radius: 0;
  	height: 80px;
  	padding: 15px 0;
@@ -41,7 +41,7 @@
  	text-transform: uppercase;
  	letter-spacing: -1px;
  	font-size: 2em;
- 	font-weight: 300;
+ 	font-weight: 500;
  	color: #1D976C !important;
  }
 
@@ -50,12 +50,12 @@
  		padding: 1em 0;
  		border-bottom: 1px solid #fafaf8;
  		h2 {
- 			font-size: 2.1em;
- 			font-weight: 300;
+ 			font-size: 1.8em;
+ 			font-weight: 600;
  			margin-bottom: 0;
  			color: #000000;
  			a {
- 				color: white;
+ 				color: #48799A;
  			}
  		}
  		p {
